name:                   maybe-either
version:                0.1.0.0
synopsis:               Data Types Isomorphic to Different Combinations of Maybe and Either.
description:
  Various data types which are isomorphic to different combinations of @Maybe@
  and @Either@, but have more precise semantics.

homepage:               https://github.com/trskop/maybe-either
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2016 Peter Trško
category:               Data
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

flag aeson
  description:          Define FromJSON and ToJSON instances.
  default:              True

library
  hs-source-dirs:       src
  exposed-modules:
      Data.Specifiable
    , Data.Specifiable.Lazy
    , Data.Specifiable.Strict
  -- other-modules:

  default-language:     Haskell2010
  other-extensions:
      CPP
    , DeriveDataTypeable
    , DeriveGeneric
    , LambdaCase
    , NoImplicitPrelude

  build-depends:
      base >=4.8 && <5

    , data-default-class
    , profunctors

  if flag(aeson)
    build-depends:      aeson
    cpp-options:        -DDEFINE_AESON_INSTANCES

  if impl(ghc >=8)
    other-extensions:   Strict
    cpp-options:        -DHAVE_LANGUAGE_STRICT
  else
    -- Package base >=4.9 (bundled with GHC 8.0.1) contains Data.Semigroup
    -- already. For olther GHC/base we need additional package.
    build-depends:      semigroups

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
--    -Werror
